--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -54,6 +54,7 @@
 				  <button type="button" class="btn btn-default" data-toggle="modal" data-target="#add-rect-modal">Add Rectangle</button>
 				  <button type="button" class="btn btn-default">Add Custom Shape</button>
 				  <button id="clear-canvas" type="button" class="btn btn-default">Clear</button>
+				  <button id="send-data-to-server" type="button" class="btn btn-default">Send to Server</button>
 				</div>
 			</div>
 		</div>
@@ -88,6 +89,5 @@
 		</form>
       </div>
     </div>
-
   </div>
 </div>
