Work on the drawing

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -9,6 +9,7 @@
 <script src="{% static "js/bootstrap.min.js "%} "></script>
 <script src="{% static "js/jcanvas.min.js "%} "></script>
 <script src="{% static "js/editor.js "%} "></script>
+<script src="{% static "js/jquery.form.min.js "%} "></script>
 <div id="unit-selected" style="display:none" value="">
 </div>
 <div class="body">
@@ -45,7 +46,7 @@
 				<h3>Choose a starting point by clicking on the graph.</h3>
 			</div>
 			<div id="tools" class="col-md-4">
-				<h3>Placeholder</h3>
+				
 			</div>
 		</div>
 		<div class="row">
