Last commit before hackathon

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,7 +10,7 @@
 <script src="{% static "js/jcanvas.min.js "%} "></script>
 <script src="{% static "js/editor.js "%} "></script>
 <script src="{% static "js/jquery.form.min.js "%} "></script>
-<div id="unit-selected" style="display:none" value="">
+<div id="unit" style="display:none" value="">
 </div>
 <div class="body">
 	<div class="container">
