--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -25,10 +25,10 @@
 			<div class="col-md-8 col-md-offset-5">
 				<h3>Choose measurement unit</h3>
 				<div id="unit-select" class="btn-group" data-toggle="buttons">
-				  <label class="btn btn-primary">
+				  <label name='m' class="btn btn-primary">
 					<input type="radio" name="meters" id="option1" autocomplete="off"> Meters
 				  </label>
-				  <label class="btn btn-primary">
+				  <label name='f' class="btn btn-primary">
 					<input type="radio" name="feet" id="option2" autocomplete="off"> Feet
 				  </label>
 				</div>
